# awesome-eu-compliance-tooling

./: .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  kill-gate.md  pyproject.toml
.github/workflows/: auto-update.yml  awesome-lint.yml  contributor-thanks.yml  contributors-refresh.yml  linkcheck.yml
tests/: test_auto_update.py
tools/: auto_update.py  eur_lex_rss.py  sindresorhus_awesome_pr_template.md
